// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for a default iPhone with iOS 14 in Portrait mode 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 667,
  "screenWidth": 375,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 70,
    "width": 375,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 44,
    "width": 375,
    "x": 0,
    "y": 623,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for a default iPhone with iOS 14 in landscape mode 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 375,
  "screenWidth": 667,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 50,
    "width": 667,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 0,
    "width": 0,
    "x": 0,
    "y": 0,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for a default iPhone with iOS 15 in landscape mode 1`] = `
Object {
  "safeArea": 44,
  "screenHeight": 375,
  "screenWidth": 812,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 50,
    "width": 812,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 9,
    "width": 212,
    "x": 300,
    "y": 359,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for a default iPhone with iOS 15 in portrait mode 1`] = `
Object {
  "safeArea": 44,
  "screenHeight": 812,
  "screenWidth": 375,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 44,
    "width": 375,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 133,
    "width": 375,
    "x": 0,
    "y": 679,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for an iPad 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 1366,
  "screenWidth": 1024,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 74,
    "width": 1024,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 9,
    "width": 320,
    "x": 352,
    "y": 1351,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for an iPad in landscape mode 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 1024,
  "screenWidth": 1366,
  "sideBarWidth": 320,
  "statusAddressBar": Object {
    "height": 74,
    "width": 1366,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 9,
    "width": 350,
    "x": 508,
    "y": 1009,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for an iPad with big sizes 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 5432,
  "screenWidth": 9876,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 70,
    "width": 9876,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 38,
    "width": 9876,
    "x": 0,
    "y": 5394,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for an iPhone with extreme not known dimensions 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 896,
  "screenWidth": 1024,
  "sideBarWidth": 0,
  "statusAddressBar": Object {
    "height": 70,
    "width": 1024,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 107,
    "width": 1024,
    "x": 0,
    "y": 789,
  },
}
`;

exports[`getIosStatusAddressToolBarOffsets should get the correct status, address and toolbar height for the iPad Pro 12.9 2017 hack in landscape mode 1`] = `
Object {
  "safeArea": 0,
  "screenHeight": 1024,
  "screenWidth": 1366,
  "sideBarWidth": 320,
  "statusAddressBar": Object {
    "height": 70,
    "width": 1366,
    "x": 0,
    "y": 0,
  },
  "toolBar": Object {
    "height": 9,
    "width": 350,
    "x": 508,
    "y": 1009,
  },
}
`;
